test/e2e/app-dir/errors/app/server-component/recover/set-recover/route.js
export function GET(request) {
  const enabled = request.nextUrl.searchParams.get('enabled') !== 'false'
  globalThis.__nextTestRecover = enabled
  return new Response('ok')
}
